src/test/ui/nll/move-subpaths-moves-root.stderr
error[E0382]: use of moved value: `x`
  --> $DIR/move-subpaths-moves-root.rs:4:10
   |
LL |     drop(x.0);
   |          --- value moved here
LL |     drop(x);
   |          ^ value used here after partial move
   |
   = note: move occurs because `x.0` has type `std::vec::Vec<i32>`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
